Multiple thread count

--- a/resources/config/config.yaml
+++ b/resources/config/config.yaml
@@ -1,3 +1,4 @@
-url: "https://vardenisiffror.se/unitlists"
+#url: "https://vardenisiffror.se/unitlists"
 #url: "https://dsa.dft.gov.uk/obs"
+url: "https://www.bbc.com/"
 browser: "chrome"
