--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,16 @@
             <artifactId>opencsv</artifactId>
             <version>5.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-core</artifactId>
+            <version>1.13</version>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>net.masterthought</groupId>-->
         <!--            <artifactId>cucumber-reporting</artifactId>-->
