--- a/resources/config/log4j.properties
+++ b/resources/config/log4j.properties
@@ -1,6 +1,6 @@
 # Root logger option
 
-log4j.rootLogger= stdout,file
+log4j.rootLogger= info,stdout,file
 
 # console appender
 log4j.appender.console = org.apache.log4j.ConsoleAppender 
@@ -8,7 +8,7 @@ log4j.appender.console.layout = org.apache.log4j.PatternLayout
 
 # Redirect log messages to console
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
+#log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
