--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,11 @@
             <artifactId>ini4j</artifactId>
             <version>0.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
 
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
