--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,11 @@
             <artifactId>okhttp</artifactId>
             <version>4.12.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-cucumber7-jvm</artifactId>
+            <version>2.29.1</version>
+        </dependency>
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
