--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,7 @@ services:
       - TZ=America/Chicago
       - SE_NODE_MAX_SESSIONS=2
       - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+      - SE_SESSION_TIMEOUT=120
     networks:
       - selenium-grid
     ports:
@@ -41,28 +42,28 @@ services:
       options:
         max-size: "100m"
 
-  edge:
-    image: 'selenium/node-edge:4.33.0'
-    shm_size: 2gb
-    depends_on:
-      - selenium-hub
-    environment:
-      - SE_EVENT_BUS_HOST=selenium-hub
-      - SE_EVENT_BUS_PUBLISH_PORT=4442
-      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
-      - SCREEN_WIDTH=1920
-      - SCREEN_HEIGHT=1080
-      - TZ=America/Chicago
-      - SE_NODE_MAX_SESSIONS=2
-      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
-    networks:
-      - selenium-grid
-    ports:
-      - '5901:5900'
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "100m"
+#  edge:
+#    image: 'selenium/node-edge:4.33.0'
+#    shm_size: 2gb
+#    depends_on:
+#      - selenium-hub
+#    environment:
+#      - SE_EVENT_BUS_HOST=selenium-hub
+#      - SE_EVENT_BUS_PUBLISH_PORT=4442
+#      - SE_EVENT_BUS_SUBSCRIBE_PORT=4443
+#      - SCREEN_WIDTH=1920
+#      - SCREEN_HEIGHT=1080
+#      - TZ=America/Chicago
+#      - SE_NODE_MAX_SESSIONS=2
+#      - SE_NODE_OVERRIDE_MAX_SESSIONS=true
+#    networks:
+#      - selenium-grid
+#    ports:
+#      - '5901:5900'
+#    logging:
+#      driver: "json-file"
+#      options:
+#        max-size: "100m"
 #
 #  firefox:
 #    image: 'selenium/node-firefox:4.33.0'
